--- a/unobackend/locales/ar/LC_MESSAGES/django.po
+++ b/unobackend/locales/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-20 19:22+0100\n"
+"POT-Creation-Date: 2024-01-21 13:25+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,6 +104,8 @@ msgid "Quantity"
 msgstr "كمية"
 
 #: .\product\models.py:7 .\product\models.py:18 .\product\models.py:29
+#: .\setting\models.py:9 .\setting\models.py:26 .\setting\models.py:39
+#: .\setting\models.py:52 .\setting\models.py:67
 msgid "Name"
 msgstr "اسم"
 
@@ -127,11 +129,12 @@ msgstr "ماركة"
 msgid "Price"
 msgstr "سعر"
 
-#: .\product\models.py:33
+#: .\product\models.py:33 .\setting\models.py:69
 msgid "Description"
 msgstr "وصف"
 
-#: .\product\models.py:34
+#: .\product\models.py:34 .\setting\models.py:27 .\setting\models.py:53
+#: .\setting\models.py:68
 msgid "Image"
 msgstr "صورة"
 
@@ -139,7 +142,7 @@ msgstr "صورة"
 msgid "Reviews"
 msgstr "التعليقات"
 
-#: .\product\models.py:36
+#: .\product\models.py:36 .\setting\models.py:54
 msgid "Slogan"
 msgstr "شعار"
 
@@ -159,19 +162,86 @@ msgstr "منتج"
 msgid "Products"
 msgstr "منتجات"
 
+#: .\setting\models.py:10
+msgid "Home cover"
+msgstr "غطاء المنزل"
+
+#: .\setting\models.py:12
+#, fuzzy
+#| msgid "Product"
+msgid "Product cover"
+msgstr "منتج"
+
+#: .\setting\models.py:14
+msgid "About"
+msgstr "عن"
+
+#: .\setting\models.py:15 .\setting\models.py:28 .\setting\models.py:41
+#: .\setting\models.py:56 .\setting\models.py:70
+msgid "Site"
+msgstr "موقع"
+
+#: .\setting\models.py:18
+msgid "Site Setting"
+msgstr "إعداد الموقع"
+
+#: .\setting\models.py:19
+msgid "Site Settings"
+msgstr "إعدادات الموقع"
+
+#: .\setting\models.py:31
+msgid "Poster Setting"
+msgstr "إعداد الملصق"
+
+#: .\setting\models.py:32
+msgid "Poster Settings"
+msgstr "إعدادات الملصقات"
+
+#: .\setting\models.py:40
+msgid "Svg Code"
+msgstr "كود Svg"
+
+#: .\setting\models.py:44
+msgid "Service Setting"
+msgstr "إعداد الخدمة"
+
+#: .\setting\models.py:45
+msgid "Service Settings"
+msgstr "إعدادات الخدمة"
+
+#: .\setting\models.py:55
+msgid "Comment"
+msgstr "تعليق"
+
+#: .\setting\models.py:59
+msgid "Testimonial Setting"
+msgstr "إعداد الشهادة"
+
+#: .\setting\models.py:60
+msgid "Testimonials"
+msgstr "الشهادات"
+
+#: .\setting\models.py:73
+msgid "Magazine Setting"
+msgstr "إعداد المجلة"
+
+#: .\setting\models.py:74
+msgid "Magazines"
+msgstr "المجلات"
+
 #: .\templates\admin\base_site.html:27
 msgid "Lang:"
 msgstr "لغة"
 
-#: .\unobackend\settings.py:160
+#: .\unobackend\settings.py:162
 msgid "English"
 msgstr "إنجليزي"
 
-#: .\unobackend\settings.py:161
+#: .\unobackend\settings.py:163
 msgid "Arabic"
 msgstr "عربي"
 
-#: .\unobackend\settings.py:162
+#: .\unobackend\settings.py:164
 msgid "French"
 msgstr "فرنسي"
 
